2. After toggling various artists grouping, or group single tracks, update list
   of genres associated with artists.
3. Fix decoding of details for Online service URLs sent to MPD, and
   subsequently read back.
4. Dont allow dragging of stream categories onto playqueue.
5. Replace # in stream names with ${hash} when passing to MPD, and revert when
   URL is displayed.

1.1.1
-----
 1. Fix crash in settings dialog if current connection name is removed from
    config file.
 2. Fix starting of per-user MPD instance.
 3. For Qt-only Linux builds, set file permissions of config file so that
    others cannot read the file - as MPD, Magnatune, or DigitallyImported
    passwords will be saved here.
 4. Fix reading of genres from cache file.
 5. Fix updating of genres after DB is refreshed.
 6. Dont use https for context view searches.
 7. Work-around Windows and QJson issue.
 8. Remove cantata prefix when showing status message about fetching streams.
 9. When adding streams that have a name assinged, but no path, then add a
    trailing slash.
10. Fix 'Add Stream URL' action in builds where device support is disabled.

1.1.0
-----
 1. Display 'Calculating...', and 'Deleting...' in cache settings page if
    relevant.
 2. Add "(Muted)" to volume button tooltip if volume is currently muted.
 3. If cover name contains %artist%, then replace with the album artist of the
    current song. Likewise for %album%
 4. Add option (to sidebar context menu) to toggle usage of monochrome icons.
 5. After ripping a CD, prompt as to whether to calculate ReplyGain.
 6. Simplify HTTP server settings. Now only the interface can be chosen. HTTP
    server is used for all non-MPD files. If computer has no, or only one,
    active network connection, then the HTTP server settings  page is hidden.
 7. Only show actions on mouse-over.
 8. Use larger action icons in icon view when we have larger previews.
 9. Better non-monochrome radio-stream icons. Thanks to Grely